--- a/app/index.html
+++ b/app/index.html
@@ -25,5 +25,10 @@
       AOS.init();
     </script>
     {{content-for "body-footer"}}
+    <!-- <p class="floating">
+      <LinkTo @route="proposal">
+        <img src="https://global.visang.com/theme/basic/img/floating_banner_souce_1.png" class="floating_img_1" style="opacity: 0.8;">
+      </LinkTo>
+    </p> -->
   </body>
 </html>
