--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <title>Imageone</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="imageone-logo.png">
+    <link rel="icon" type="image/png" href="logo1.png">
     {{content-for "head"}}
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
