--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/visang-bootstrap.css">
     <link rel="stylesheet" href="https://global.visang.com/css/aos.css">
+    <link rel="stylesheet" href='https://mmwebfonts.comquas.com/fonts/?font=pyidaungsu' />
 
     {{content-for "head-footer"}}
   </head>
