--- a/app/index.html
+++ b/app/index.html
@@ -19,8 +19,8 @@
   <body>
     {{content-for "body"}}
 
-    <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/visang-bootstrap.js"></script>
+    <script src="/assets/vendor.js"></script>
+    <script src="/assets/visang-bootstrap.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
