--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,8 @@
     <link rel="icon" type="image/png" href="/imageone-tab.png">
     {{content-for "head"}}
 
-    <link integrity="" rel="stylesheet" href="/assets/vendor.css">
-    <link integrity="" rel="stylesheet" href="/assets/visang-bootstrap.css">
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/visang-bootstrap.css">
     <link rel="stylesheet" href="https://global.visang.com/css/aos.css">
     <link rel="stylesheet" href='https://mmwebfonts.comquas.com/fonts/?font=pyidaungsu' />
 
